src/test_output/guided/crash-oracle/fail/torch.nn.LSTM/347.py
import torch
arg_1 = 213
arg_2 = 169
arg_3 = False
arg_4 = False
arg_class = torch.nn.LSTM(arg_1,arg_2,bidirectional=arg_3,batch_first=arg_4,)
arg_5_0_tensor = torch.randint(-4096,8192,[1, 15, 290], dtype=torch.int16)
arg_5_0 = arg_5_0_tensor.clone()
arg_5 = [arg_5_0,]
res = arg_class(*arg_5)
